# kriptistan

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
configs/: backtest.toml  backtest_6m_train_15d_test.toml  backtest_last_15d_all_futures.toml
src/kriptistan/: __init__.py  backtest.py  cache.py  cli.py  config.py  cycles.py  data_binance.py  data_fng.py  engine.py  execution.py  gates.py  indicators.py  market_data.py  models.py  outputs.py  reports.py  sizing.py  strategies.py  walkforward.py
tests/: test_config.py  test_cycles.py  test_execution.py  test_gates.py  test_outputs.py  test_walkforward.py
