[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kriptistan"
version = "0.1.0"
description = "Futures-first crypto strategy backtester."
requires-python = ">=3.12"
dependencies = ["tqdm>=4,<5"]

[project.scripts]
kriptistan-backtest = "kriptistan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
